# hyakume

./: .gitignore  Makefile  README.md  SPEC.md  docker-compose.yml  stone-scanner-project-plan.md
archive/: INDEX.md  README.md  stone-scanner-project-plan.md
archive/diagram/: data-flow.mmd
archive/stone-defect-project-document/: 01-PRD-stonescan.md  02-technical-architecture-stonescan.md  03-security-and-access-stonescan.md  04-frontend-spec-stonescan.md  05-feature-tickets-stonescan.md
backend/: Dockerfile  go.mod
dashboard/: package.json
deploy/terraform/: README.md  gpu.tf  main.tf  outputs.tf  platform.tf  terraform.tfvars.example  variables.tf  versions.tf
diagram/: data-flow.mmd  system-overview.mmd
edge/: requirements.txt
edge/capture/: __init__.py  controller.py
edge/grading/: __init__.py  engine.py
edge/inference/: __init__.py  engine.py
mlops/: MLOPS_GUIDE.md  Makefile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
mlops/eval/: run_eval.py
mlops/export/: export_onnx.py
mlops/scripts/: evaluate.py  export.py  fetch_data.py  train.py
mlops/src/stonescan_ml/: config.py
mlops/src/stonescan_ml/evaluation/: metrics.py
mlops/src/stonescan_ml/training/: anomaly.py
mlops/src/stonescan_ml/utils/: logging.py  seed.py
mlops/tests/: test_config.py  test_metrics.py
mlops/train/: train_anomaly.py  train_segmentation.py
stone-defect-project-document/: 01-PRD-stonescan.md  02-technical-architecture-stonescan.md  03-security-and-access-stonescan.md  04-frontend-spec-stonescan.md  05-feature-tickets-stonescan.md
(+12 files in other folders)
