[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonescan-ml"
version = "0.1.0"
description = "StoneScan MLOps — anomaly detection, segmentation, eval, export."
requires-python = ">=3.10,<3.13"
readme = "README.md"
authors = [{ name = "StoneScan" }]

dependencies = [
    "anomalib>=2.0,<3.0",
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "mlflow>=2.14,<4.0",
    "dvc[s3]>=3.50,<4.0",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "ipykernel",
]

[project.scripts]
stonescan-fetch    = "stonescan_ml.cli:fetch"
stonescan-train    = "stonescan_ml.cli:train"
stonescan-evaluate = "stonescan_ml.cli:evaluate"
stonescan-export   = "stonescan_ml.cli:export_"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
